# recommendation-system

./: .env.example  .gitignore  CONTAINER_ENV_VARIABLES_GUIDE.md  Makefile  __init__.py  conftest.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  version.py
.github/workflows/: ci.yml
common/config/: __init__.py
common/logger/: __init__.py  __pycache__.py
common/utils/: __init__.py
data/processed/: movies.parquet  users.parquet
data_pipeline/: __init__.py
data_pipeline/feature_engineering/: __init__.py  engineer.py
data_pipeline/ingestion/: __init__.py  loaders.py
data_pipeline/splitting/: __init__.py  splitter.py
data_pipeline/utils/: __init__.py
data_pipeline/validation/: __init__.py  schema_validator.py
eda_results/: eda_report.txt
feast_repo/: __init__.py
feast_repo/feature_repo/: feature_store.yaml
feast_repo/feature_views/: __init__.py  features.py
frontend/: __init__.py
frontend/streamlit_app/: __init__.py  app.py
infra/: __init__.py
infra/aws_batch/: __init__.py  feature_materialization_job.json  iam_policy.json  ingestion_job.json  training_job.json
infra/docker/: Dockerfile.api  Dockerfile.base  Dockerfile.ingestion  Dockerfile.training  __init__.py
infra/scripts/: deploy.sh  register_jobs.sh
scripts/: __init__.py  api_server.py  eda.py  health_check.py  ingestion_job.py  init_env.py  pipeline.py  training_job.py  verify.py
serving/: __init__.py
serving/api/: main.py  routes.py
tests/: test_features.py  test_metrics.py  test_splitting.py  test_validation.py
training/: __init__.py
(+12 files in other folders)
